(민정) 11/29 소스 백업

--- a/JS_PRO/css/MainGame.css
+++ b/JS_PRO/css/MainGame.css
@@ -5,14 +5,65 @@ body {
 
 .GameBackground {
     background-image: url('../img/GameBackground.png');
-    width: 1920px;
-    height: 980px;
     background-size: 1920px 1200px;
-    border: 0;
+    width: 100vw;
+    height: 100vh;
     position: relative;
-    text-align:center; line-height:100px; margin:0 auto;  color:#000; font-size:12px;
+    border: 0;
+    opacity: 0.9;
+}
+
+div[id*="step"]{
+    height: 30px;
+    width: 400px;
+    margin-left: 750px;
+    position: absolute;
+    margin-top: 500px;
+
+}
+div[id*="step"] img {
+    display: block;
+    height: 30px;
+    width: 400px;
 }
 
 .customer {
-    margin-top: 2000px;
+    margin-top: 90px;
+    margin-left: 450px;
+    position: absolute;
+    height: 300px;
+    width: 300px;
+    border: 0;
+}
+.customer img{
+    height: 400px;
+    width: 400px;
+}
+
+.orderBox {
+    margin-top: 90px;
+    margin-left: 750px;
+    position: absolute;
+    height: 300px;
+    width: 300px;
+    border: 0;
+}
+
+.orderBox img {
+    height: 330px;
+    width: 800px;
+}
+
+.order_Sandwich {
+    margin-top: 10px;
+    margin-left: 980px;
+    position: absolute;
+    height: 150px;
+    width: 300px;
+    border: 0;
+}
+.order_Sandwich img {
+    height: 150px;
+    width: 300px;
+    border: none;
 }
